v1.0.0; fixes #5, fixes #6, fixes #7